# Yatzy-Refactoring-Kata

./: .gitignore  README.md
c/: .gitignore  CMakeLists.txt
c/src/: CMakeLists.txt  yatzy.c  yatzy.h
c/test-gtest/: CMakeLists.txt  yatzy_gtest.Yatzy.YatzyCategoriesCombinations.approved.txt  yatzy_gtest.cpp
clojure/: project.clj
cpp/: .gitignore  CMakeLists.txt  yahtzee.cpp  yahtzee.tests.cpp  yatzy.hpp  yatzy.tests.cpp
cpp/src/: CMakeLists.txt  yatzy.cpp  yatzy.hpp  yatzy1.cpp  yatzy1.hpp  yatzy2.h
cpp/test-catch2/: CMakeLists.txt  yatzy_catch.Yatzy2.approved.txt  yatzy_catch.cpp
cpp/test-doctest/: CMakeLists.txt  sample_doctest.cpp
cpp/test-gtest/: sample_gtest.cpp
csharp/: .gitignore  README.md  Yahtzee.cs  YahtzeeTest.cs  Yatzy.cs  Yatzy.sln  YatzyMSTest.cs  YatzyTest.cs
elixir/: README.md  test_yatzy.exs  yatzy.exs
fsharp/: yatzy.sln
go/: README.md  go.mod
java/: .gitignore  README.md  Yahtzee.java  YahtzeeTest.java  Yatzy.java  pom.xml
javascript/: README.md  package-lock.json  package.json
kotlin/: .gitignore  build.gradle  build.gradle.kts  settings.gradle  settings.gradle.kts
miniscript/: README.md  yatzy.ms
perl/: Yatzy.pm  test.pl
php/: .gitignore  README.md  YatzyTest.php  composer.json  ecs.php  yatzy.php
python/: .gitignore  README.md  test_yahtzee.py  test_yatzy.py  test_yatzy1.py  test_yatzy_refactorizado.py  yahtzee.py  yatzy.py  yatzy2.py  yatzy3.py  yatzy_refactorizado.py
ruby/: test_yahtzee.rb  test_yatzy.rb  yahtzee.rb  yatzy.rb
rust/: Cargo.toml
scala/: .gitignore  .scalafmt.conf  build.sbt
swift/: Yatzy.swift  YatzyTests.swift
typescript/: .gitignore  README.md  package.json  (+2 more)
(+272 files in other folders)
